<resources>
    <string name="app_name">PandatechTechTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_users">Add Users</string>
    <string name="delete_users">Delete Users</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="save_users">Save Users</string>
    <string name="username_is_empty">Username is empty!</string>
    <string name="email_is_not_valid">Email is not valid!</string>
    <string name="there_are_no_users_please_add_one">There are no users! Please add one.</string>
</resources>